# llm-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  image_build.sh  pyproject.toml  requirements.txt  start.bat  start.sh
llm_monitor/: __init__.py  main.py
llm_monitor/api/: __init__.py
llm_monitor/api/endpoints/: instances.py  metrics.py  traces.py  vllm_metrics.py
llm_monitor/core/: config.py
llm_monitor/models/: __init__.py  vllm.py
llm_monitor/services/: __init__.py  metrics_query.py  vllm_collector.py
llm_monitor/static/: index.html  index2.html
tests/: conftest.py
